stylesheets/_component.signin.scss
// scss-lint:disable UrlFormat

$signin-full-width:					500px;
$signin-mobile-width:				320px;
$signin-panel-full-width:		460px;
$signin-panel-mobile-width:	300px;

.signin-backdrop {
	background: #fff;
	background-image: url('../images/signin-backdrop.jpg');
	background-attachment: fixed;
	background-position: center center;
	background-repeat: no-repeat;
	background-size: cover;
	bottom: 0;
	left: 0;
	position: fixed;
	right: 0;
	top: 0;
	z-index: -1;
}

.signin-brand {
	border-top: 1px solid #ccc;
	bottom: 0;
	display: block;
	height: 46px;
	left: 0;
	margin: 0;
	position: absolute;
	right: 0;
	text-align: center;
	width: $signin-mobile-width;

	@include respond-min(540px) {
		border: 0;
		left: auto;
		right: 10px;
		width: 200px;
	}

	> img {
		filter: brightness(0);
		vertical-align: bottom;
		width: 200px;

		@include respond-min(540px) {
			filter: drop-shadow(0 0 10px #000);
		}
	}
}

.signin-container {
	display: flex;
	height: 100%;
}

.signin {
	background-color: $signin-bg-color;
	box-shadow: 0 0 0 10px rgba(0, 0, 0, .3);
	overflow: hidden;
	margin: 0;
	padding: $padding-base 0;
	width: $signin-mobile-width;
	transition: width .25s, padding .25s;

	@include respond-min($screen-tablet) {
		width: $signin-full-width;
		margin: 40px;
		padding: 40px 0;
	}

	&--error {
		.loading--circle i {
			border: 1px solid rgba(0, 0, 0, .2);
			border-top-color: color(white);
		}
	}
}

.signin__inner {
	float: left;
	height: calc(100% - 100px);
	overflow-x: visible;
	overflow-y: scroll;
	transition: width .25s, padding .25s;
	width: $signin-panel-mobile-width * 6;

	@include respond-min(540px) {
		height: 100%;
		padding-bottom: 70px;
		width: $signin-panel-full-width * 6;
	}

	.active-reset & {
		position: relative;
		margin-left: -$signin-panel-mobile-width;

		@include respond-min($screen-tablet) {
			margin-left: -$signin-panel-full-width;
		}
	}

	.active-forgot & {
		position: relative;
		margin-left: -$signin-panel-mobile-width * 2;

		@include respond-min($screen-tablet) {
			margin-left: -$signin-panel-full-width * 2;
		}
	}

	.active-success.active-success & {
		position: relative;
		margin-left: -$signin-panel-mobile-width * 4;

		@include respond-min($screen-tablet) {
			margin-left: -$signin-panel-full-width * 4;
		}
	}

	.active-twostep & {
		position: relative;
		margin-left: -$signin-panel-mobile-width * 3;

		@include respond-min($screen-tablet) {
			margin-left: -$signin-panel-full-width * 3;
		}

		.signin-form,
		.signin-reset {
			visibility: hidden;
			z-index: -1;
		}

		.signin-twostep {
			z-index: 1;
		}
	}

	.active-success & {
		.signin-form,
		.signin-reset,
		.signin-twostep {
			visibility: hidden;
			z-index: -1;
		}

		.signin-success {
			z-index: 1;
		}
	}

}

.signin__panel {
	float: left;
	padding: 0 0 2.5em 20px;
	transition: width .25s, padding .25s, z-index .25s;
	width: $signin-panel-mobile-width;

	@include respond-min($screen-tablet) {
		padding-left: 40px;
		width: $signin-panel-full-width;
	}
}

.signin-form {
	background-color: transparent;
}

// form alignment
.signin .form {
	background-color: transparent;

	fieldset {
		padding: 0;
	}

	p {
		margin-bottom: $line-height-base / 2;
	}

	.legend {
		border-bottom: 1px solid color(border);
		line-height: $line-height-base;
		margin-bottom: 5px;
	}

	.form__group {
		margin-bottom: 0;
	}

	.form__group--top .control__label {
		margin-bottom: 0;
	}

	.form__actions {
		border-top: 0;
		padding-bottom: 0;
	}

	.input-group-btn .btn {
		border: 2px solid color(black);
		line-height: 44px;
	}
}

.signin__input,
.signin .form__control.form__control {
	background-color: none;
	border: 2px solid color(black);
	display: inline-block;
	margin: 0 auto 1em;
	padding: 10px;
	width: 100%;

	&:focus {
		@include pulsar-input-focused;
	}
}

.signin__code1,
.signin__code2 {
	@extend .signin__input;
	display: inline-block;
	font-family: courier;
	letter-spacing: 5px;
	margin: 0 5px 1em 0;
	padding: 10px 10px 10px 12px;
	width: 81px;

	@include respond-min($screen-tablet) {
		padding: 10px 10px 10px 20px;
	}
}

.signin__actions + .signin__actions {
	border-top: 1px solid #ccc;
	margin-top: 2em;
	padding-top: 1.5em;
}

.signin__action {
	display: block;
	margin: 0 0 1em;
	width: 100%;
}

.signin__submit {
	display: inline-block;
	margin: 0 auto;
	width: 40%;

	.loading {
		margin: 0 auto;
	}
}

.signin__alt {
	background-color: color(white);
	border-radius: 20px;
	display: block;
	margin-top: 1em;
	text-align: left;
	width: 100%;

	.svg-inline--fa {
		margin-right: 10px;
	}
}

.connect-logo {
	&::before {
		background: url('../images/branding/jadu-connect-logomark.svg');
    background-size: 19px 19px;
		background-repeat: no-repeat;
		content: '';
    display: inline-block;
		height: 19px;
		text-align: center;
		vertical-align: middle;
    width: 19px;
	}
}

.signin__action-separator {
	display: inline-block;
	text-align: center;
	width: 18%;
}

.signin__heading {
	border-bottom: 1px solid #ccc;
	color: color(gray, darker);
	font-family: $font-family-heading;
	margin: 0 $padding-base;
	padding-bottom: 1em;
	text-align: left;

	@include respond-min($screen-tablet) {
		margin: 0 40px;
	}
}

.signin__info {
	display: block;
	margin: 1em 0;
}

.signin__link {
	display: inline-block;
	margin-top: .5em;
}

.signin__group {
	clear: left;
	position: relative;
}

.signin__hint {
	animation-duration: 1s;
	animation-fill-mode: both;
	animation-iteration-count: infinite;
	animation-name: hint-wobble-small;
	display: inline-block;
	font-size: 1em;
	left: -16px;
	position: absolute;
	width: 25px;
	top: 32px;

	@include respond-min($screen-tablet) {
		animation-name: hint-wobble;
		font-size: 1.5em;
		left: -30px;
		top: 32px;
	}

	&::before {
		content: '\f0a4';
		font-family: $font-family-icons;
		font-style: normal;
	}

	.signin-twostep & {
		left: 55px;
		top: 10px;

		@include respond-min($screen-tablet) {
			left: 85px;
		}
	}

	.signin__code2 + & {
		left: inherit;
		right: 50px;

		@include respond-min($screen-tablet) {
			left: inherit;
			right: 80px;
		}

		&::before {
			content: '\f0a5';
			font-family: $font-family-icons;
			font-style: normal;
		}
	}
}

.signin__icon {
	display: block;
	float: left;
	margin: 1em 5px 0 0;

	.signin--error &,
	.signin-success & {
		&::before {
			font-family: $font-family-icons;
			font-style: normal;
			font-weight: 600;
		}
	}

	.signin--error &::before {
		content: '\f06a';
		color: color(danger);
	}

	.active-success .signin-success & {
		height: 150px;
		position: relative;
		text-align: center;
		top: 60px;
		width: 100%;

		&::before {
			content: '\f058';
			color: color(success);
			font-size: 100px;
			width: 100px;
		}
	}
}

.signin-twostep label {
	display: none;
}

// 2FA code input in control centre UI
.form__group .controls,
.modal {
	.form__control.signin__code1,
	.form__control.signin__code2 {
		display: inline-block;
		font-family: courier;
		letter-spacing: 2px;
		padding: 0 10px;
		width: 55px;
	}
}

.signin-credits {
	bottom: 10px;
	color: #fff;
	display: none;
	font-size: $font-size-small;
	position: absolute;
	right: 10px;

	a {
		color: #fff;
	}

	a:focus {
		color: #000;
	}
}

@keyframes hint-wobble {
	0%, 50%, 100% {
		transform: translateX(0);
	}

	25%, 75% {
		transform: translateX(-5px);
	}
}

@keyframes hint-wobble-small {
	0%, 50%, 100% {
		transform: translateX(0);
	}

	25%, 75% {
		transform: translateX(-2px);
	}
}

[id="recaptcha_widget_div"] {
	display: inline-block;
	margin: 0 auto 1em;
}

// scss-lint:enable UrlFormat

